--- a/serverpod_inheritance_client/pubspec.yaml
+++ b/serverpod_inheritance_client/pubspec.yaml
@@ -7,8 +7,12 @@ environment:
 dependencies:
   serverpod_client: 3.0.0-alpha.1
 
-dependency_overrides: 
-  serverpod_client: 
-    path: C:/Users/Marcelo/Jupyter/GitHub/serverpod/packages/serverpod_client 
-  serverpod_serialization: 
-    path: C:/Users/Marcelo/Jupyter/GitHub/serverpod/packages/serverpod_serialization 
+dev_dependencies:
+  lints: '>=3.0.0 <7.0.0'
+  test: '^1.24.2'
+
+dependency_overrides:
+  serverpod_client:
+    path: C:/Users/Marcelo/Jupyter/GitHub/serverpod/packages/serverpod_client
+  serverpod_serialization:
+    path: C:/Users/Marcelo/Jupyter/GitHub/serverpod/packages/serverpod_serialization
