--- a/serverpod_inheritance_server/analysis_options.yaml
+++ b/serverpod_inheritance_server/analysis_options.yaml
@@ -22,7 +22,7 @@ linter:
 
 analyzer:
   exclude:
-    - lib/src/generated/**
+    # - lib/src/generated/**
     - test/integration/test_tools/serverpod_test_tools.dart
 # For more information about the core and recommended set of lints, see
 # https://dart.dev/go/core-lints
